<resources>
    <string name="app_name">Adresse</string>
    <string name="address">Adress</string>
    <string name="name">Nom</string>
    <string name="phone">Telephone</string>
    <string name="address_edit">Adresse</string>
    <string name="name_edit">Nom</string>
    <string name="phone_edit">Telephone</string>
    <string name="submit">Modifier</string>
    <string name="cancel">Annuler</string>
    <string name="edit">Modifier</string>
</resources>
